tests/machine/x/erlang/group_by_join.error
exit status 127
tests/machine/x/erlang_new/group_by_join.erl:7:223: syntax error before: ','
escript: There were compilation errors.
